k8s/db-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: db-deploy
  namespace: sandesh

spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db

    spec:
      containers:
        - name: app-db
          image: mysql
          ports:
            - containerPort: 3306

          volumeMounts:
            - name: db-volume
              mountPath: /var/lib/mysql
       
          resources:
            requests:
              cpu: "100m"
              memory: "264Mi"
            limits:
              cpu: "200m"
              memory: "512Mi"

      affinity:
        podAntiAffinity:  
          requiredDuringSchedulingIgnoredDuringExecution: 
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - db
            topologyKey: "kubernetes.io/hostname"
      volumes:
       - name: db-volume
         persistentVolumeClaim:
           claimName: db-pvc

---

kind: Service
apiVersion: v1
metadata:
  name: db-svc
  namespace: sandesh
spec:
  selector:
    app: db

  ports:
    - port: 3306
      targetPort: 3306
      protocol: TCP
