k8s/deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: app-deploy
  namespace: sandesh

spec:
  replicas: 1
  selector:
    matchLabels:
      app: sandesh
  template:
    metadata:
      labels:
        app: sandesh

    spec:
      containers:
        - name: app
          image: yashsaini252/my-app
          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "264Mi"
            limits:
              cpu: "150m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 5
               
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 60
            periodSeconds: 10
            failureThreshold: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - sandesh
            topologyKey: "kubernetes.io/hostname"
---

kind: Service
apiVersion: v1
metadata:
  name: app-svc
  namespace: sandesh
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
spec:
  selector:
    app: sandesh

  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
